<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        tools:context="appuss.com.br.imc.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/intro"
            android:id="@+id/intro"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro"
            android:orientation="horizontal"
            android:id="@+id/firstRow"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:id="@+id/tvPeso"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/etPeso"
                android:inputType="numberDecimal"
                android:hint="@string/hṔeso"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/firstRow"
            android:id="@+id/secondRow">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:id="@+id/tvAltura"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/etAltura"
                android:inputType="numberDecimal"
                android:hint="@string/hAltura"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/secondRow"
            android:id="@+id/thirdRow">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:id="@+id/tvSexo"/>

            <Spinner
                android:id="@+id/sSexo"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thirdRow"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnLimpar"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/limpar"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnCalcular"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calcular"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>