<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:layout_marginTop="20dp"
    tools:context="appuss.com.br.imc.ResultsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:id="@+id/tvSuspense"
        android:text="@string/suspense"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:id="@+id/tvResultado" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivImagem"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imagem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescricao"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btnVoltar"
        android:text="@string/voltar"
        android:layout_marginTop="15dp"/>

</LinearLayout>